<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_rounding" >
        <CheckBoxPreference
            android:title="@string/pref_rounding_title"
            android:summary=""
            android:key="prefRoundingEnabled"
            android:defaultValue="true" >
            </CheckBoxPreference>
        <ListPreference
            android:title="@string/rounded_decimal_places"
            android:summary="@string/set_the_rounding_precision"
            android:key="prefRoundingPrecision"
            android:defaultValue="2"
            android:entries="@array/RoundingPrecisionAmount"
            android:entryValues="@array/RoundingPrecisionAmount"
            />
        <ListPreference
            android:title="@string/rounding_mode"
            android:summary="@string/select_the_rounding_mode"
            android:key="prefRoundingMode"
            android:defaultValue="Up"
            android:entries="@array/RoundingModeType"
            android:entryValues="@array/RoundingModeType"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other" >
        <CheckBoxPreference
            android:title="@string/auto_calculate"
            android:summary="@string/auto_calculate_summary"
            android:key="prefAutoCalculate"
            android:defaultValue="true" >
        </CheckBoxPreference>
    </PreferenceCategory>

    <!--
    <PreferenceCategory android:title="@string/pref_update_setting" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>

        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary"
            android:entryValues="@array/syncFrequencyValues"
           android:title="@string/pref_sync_frequency" />
    </PreferenceCategory>
    -->

</PreferenceScreen>